# Summoners-school

./: .env  .gitignore  README.md  pyproject.toml
docs/: FolderStructure.md  RunProject.md
src/: controllers.py  main.py  routes.py  services.py
src/config/: db_connector.py  env_config.py
src/controllers/: course_controller.py
src/db/: db_connector.py
src/exceptions/: base_exceptions.py  handler.py
src/model/: course_model.py  guide_model.py
src/routes/: course_routes.py
src/services/: course_services.py
src/utils/: id_validator.py
test/: test_course.py
