[project]
name = "summoners-school"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bson>=0.5.10",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "uvicorn[standard]>=0.35.0",
]
